--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dependencies": {
         "cloudinary": "^1.21.0",
         "fluent-ffmpeg": "^2.1.2",
-        "ice-container": "0.0.13",
+        "ice-container": "^0.1.1",
         "rock-gather": "0.0.6",
-        "waterfall-gate": "0.0.15"
+        "waterfall-gate": "0.0.17"
     },
     "devDependencies": {
         "@types/node": "^13.9.5",
